--- a/sample/create-barcode-result.html
+++ b/sample/create-barcode-result.html
@@ -1,3 +1,6 @@
+<h1>Japan post check sheet</h1>
+<p><a href="https://www.post.japanpost.jp/zipcode/zipmanual/p25.html" target="_blank">check sheet</a></p>
+
 <h1>svg case1</h1><?xml version="1.0" standalone="no" ?>
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 <svg width="274" height="12" viewBox="0 0 274 12" version="1.1" xmlns="http://www.w3.org/2000/svg">
